--- a/simple-chat/src/index.html
+++ b/simple-chat/src/index.html
@@ -27,6 +27,7 @@
             <button class="attachment" ><span class="material-icons">attachment</span></button>
         </form>
 
-        <script src="index.js"></script>
+        <script, src="index.js">       
+        </script>
     </body>
 </html>
