--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Send a message</title>
         <link rel="stylesheet" href="index.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    </head>
+    <link href="style.css" rel="stylesheet"></head>
     <body>
         <header>
             <button class="arrow_back" type="">
@@ -27,6 +27,7 @@
             <button class="attachment" ><span class="material-icons">attachment</span></button>
         </form>
 
-        <script src="index.js"></script>
+        <script, src="index.js">       
+        </script>
     <script type="text/javascript" src="bundle.js"></script></body>
 </html>
