--- a/simple-chat/src/chat_detail/index.html
+++ b/simple-chat/src/chat_detail/index.html
@@ -3,7 +3,10 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Send a message</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="css/chat.css">
+        <link rel="stylesheet" href="css/form.css">
+        <link rel="stylesheet" href="css/header.css">
+        <link rel="stylesheet" href="css/page.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
@@ -27,7 +30,7 @@
             <button class="attachment" ><span class="material-icons">attachment</span></button>
         </form>
 
-        <script, src="index.js">       
+        <script, src="js/index.js">       
         </script>
     </body>
 </html>
