--- a/simple-chat/src/chat_detail/index.html
+++ b/simple-chat/src/chat_detail/index.html
@@ -30,7 +30,7 @@
             <button class="attachment" ><span class="material-icons">attachment</span></button>
         </form>
 
-        <script, src="js/index.js">       
+        <script, src="src/chat_detail/js/index.js">       
         </script>
     </body>
 </html>
