--- a/simple-chat/src/chat_list/index.html
+++ b/simple-chat/src/chat_list/index.html
@@ -23,7 +23,7 @@
         <section class="chats-list">
             <div class="chat" onclick="goToChat();">
                 <div class="chat-picture">
-                    <img class="picture" src="images/img1.png" alt="profile_photo"  style="width:60px;height:60px;">
+                    <img class="picture" src="src/chat_list/images/img1.png" alt="profile_photo"  style="width:60px;height:60px;">
                 </div>
                 <div class="chat-details">
                     <span class="chat-name">Дженнифер Эшли</span>
@@ -36,7 +36,7 @@
             </div>
             <div class="chat" onclick="goToChat();">
                 <div class="chat-picture">
-                    <img class="picture" src="images/img2.png" alt="profile_photo" style="width:60px;height:60px;">
+                    <img class="picture" src="src/chat_list/images/img2.png" alt="profile_photo" style="width:60px;height:60px;">
                 </div>
                 <div class="chat-details">
                     <span class="chat-name">Общество целых бокалов</span>
@@ -53,7 +53,9 @@
             <span class="material-icons">create</span>
         </button>
 
-        <script src="js/index.js">       
+        <script src="src/chat_list/js/index.js"> 
+        </script>  
+        <script src="src/chat_list/js/goToChat.js">  
         </script>
     </body>
 </html>
