deploy: 1a6271388ed89775cf1a8bced3aa476fdaf0fc93

--- a/chat_list/index.html
+++ b/chat_list/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/page.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="style.css" rel="stylesheet"></head>
+    </head>
     <body>
         <header>
             <button class="menu" type="">
@@ -57,5 +57,5 @@
         </script>  
         <script src="src/chat_list/js/goToChat.js">  
         </script>
-    <script type="text/javascript" src="bundle.js"></script></body>
+    </body>
 </html>
