--- a/simple-chat/src/chat_list/index.html
+++ b/simple-chat/src/chat_list/index.html
@@ -2,6 +2,7 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
+        <meta name=viewport content="width=device-width, initial-scale=1">
         <title>Chat list</title>
         <link rel="stylesheet" href="css/chat.css">
         <link rel="stylesheet" href="css/float-button.css">
@@ -23,7 +24,7 @@
         <section class="chats-list">
             <div class="chat" onclick="goToChat();">
                 <div class="chat-picture">
-                    <img class="picture" src="./images/img1.png" alt="profile_photo"  style="width:60px;height:60px;">
+                    <img class="picture" src="src/chat_list/images/img1.png" alt="profile_photo"  style="width:60px;height:60px;">
                 </div>
                 <div class="chat-details">
                     <span class="chat-name">Дженнифер Эшли</span>
@@ -36,7 +37,7 @@
             </div>
             <div class="chat" onclick="goToChat();">
                 <div class="chat-picture">
-                    <img class="picture" src="./images/img2.png" alt="profile_photo" style="width:60px;height:60px;">
+                    <img class="picture" src="src/chat_list/images/img2.png" alt="profile_photo" style="width:60px;height:60px;">
                 </div>
                 <div class="chat-details">
                     <span class="chat-name">Общество целых бокалов</span>
@@ -53,9 +54,9 @@
             <span class="material-icons">create</span>
         </button>
 
-        <script src="./js/index.js"> 
+        <script src="src/chat_list/js/index.js"> 
         </script>  
-        <script src="./js/goToChat.js">  
+        <script src="src/chat_list/js/goToChat.js">  
         </script>
     </body>
 </html>
