--- a/chat_detail/index.html
+++ b/chat_detail/index.html
@@ -2,6 +2,7 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
+        <meta name=viewport content="width=device-width, initial-scale=1">
         <title>Send a message</title>
         <link rel="stylesheet" href="css/chat.css">
         <link rel="stylesheet" href="css/form.css">
@@ -30,7 +31,7 @@
             <button class="attachment" ><span class="material-icons">attachment</span></button>
         </form>
 
-        <script, src="./js/index.js">       
-        </script>
+        <script src="js/index.js"></script> 
+        <script src="js/createMessage.js"></script> 
     </body>
 </html>
