--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<!DOCTYPE html>
-<!-- Точка входа для github pages -->
-<html>
-    <body>
-        <script>
-        	window.location.href = './public/index.html';
-        </script>
-  	</body>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><title>React App</title><script defer="defer" src="/2022-2-VK-EDU-FS-Frontend-S-Serebryakova/static/js/main.70a9b05d.js"></script><link href="/2022-2-VK-EDU-FS-Frontend-S-Serebryakova/static/css/main.11ac5bf5.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
